[package]
name = "backup"
version = "0.0.1"
edition = "2018"
publish = false

[features]
default = ["test-engines-rocksdb", "cloud-aws", "cloud-gcp", "cloud-azure"]
cloud-aws = ["external_storage_export/cloud-aws"]
cloud-gcp = ["external_storage_export/cloud-gcp"]
cloud-azure = ["external_storage_export/cloud-azure"]
cloud-storage-grpc = ["external_storage_export/cloud-storage-grpc"]
cloud-storage-dylib = ["external_storage_export/cloud-storage-dylib"]
test-engines-rocksdb = [
  "tikv/test-engines-rocksdb",
]
test-engines-panic = [
  "tikv/test-engines-panic",
]
tcmalloc = ["tikv/tcmalloc"]
jemalloc = ["tikv/jemalloc"]
mimalloc = ["tikv/mimalloc"]
snmalloc = ["tikv/snmalloc"]
portable = ["tikv/portable"]
sse = ["tikv/sse"]
mem-profiling = ["tikv/mem-profiling"]
failpoints = ["tikv/failpoints"]

[dependencies]
api_version = { path = "../api_version", default-features = false }
concurrency_manager = { path = "../concurrency_manager", default-features = false }
online_config = { path = "../online_config" }
crc64fast = "0.1"
engine_rocks = { path = "../engine_rocks", default-features = false }
engine_traits = { path = "../engine_traits", default-features = false }
error_code = { path = "../error_code", default-features = false }
external_storage = { path = "../external_storage", default-features = false }
external_storage_export = { path = "../external_storage/export", default-features = false }
file_system = { path = "../file_system", default-features = false }
encryption = {path = "../encryption", default-features = false}
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
grpcio = { version = "0.10",  default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
hex = "0.4"
keys = { path = "../keys", default-features = false }
kvproto = { git = "https://github.com/pingcap/kvproto.git" }
lazy_static = "1.3"
log_wrappers = { path = "../log_wrappers" }
pd_client = { path = "../pd_client", default-features = false }
prometheus = { version = "0.13", default-features = false, features = ["nightly"] }
raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
raftstore = { path = "../raftstore", default-features = false }
security = { path = "../security", default-features = false }
serde = "1.0"
serde_derive = "1.0"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
# better to not use slog-global, but pass in the logger
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
thiserror = "1.0"
tidb_query_common = { path = "../tidb_query_common", default-features = false }
tikv = { path = "../../", default-features = false }
tikv_alloc = { path = "../tikv_alloc" }
tikv_util = { path = "../tikv_util", default-features = false }
collections = { path = "../collections" }
txn_types = { path = "../txn_types", default-features = false }
yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
tokio = { version = "1.5", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
async-channel = "1.4"


[dev-dependencies]
rand = "0.8"
tempfile = "3.0"
tokio = { version = "1.5", features = ["time", "macros"] }
