[package]
name = "br-stream"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "playground"
path = "bin/playground.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [features]
# default = ["protobuf-codec"]
# protobuf-codec = ["kvproto/protobuf-codec"]
# prost-codec = ["prost", "kvproto/protobuf"]

[dependencies]

tokio = { version = "1.5", features = ["rt-multi-thread", "macros", "time", "sync"] }
async-trait = { version = "0.1" }
thiserror = "1"
bytes = "0.4"
etcd-client = "0.7"
kvproto = { git = "https://github.com/pingcap/kvproto.git", branch = "br-stream"}
tokio-stream = "0.1"
protobuf = { version = "2.8", features = ["bytes"] }
regex = "1"
tikv_util = {path = "../tikv_util"}
lazy_static = "1.4"
futures = "0.3"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
hex = "0.4"