[package]
name = "br-stream"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "playground"
path = "bin/playground.rs"

[features]
default = ["test-engines-rocksdb"]
test-engines-rocksdb = [
  "tikv/test-engines-rocksdb",
]

[dependencies]
tokio = { version = "1.5", features = ["rt-multi-thread", "macros", "time", "sync"] }
prometheus = { version = "0.13", default-features = false, features = ["nightly"] }
async-trait = { version = "0.1" }
thiserror = "1"
bytes = "0.4.12"
etcd-client = { version = "0.7", features = ["pub-response-field"] }
kvproto = { git = "https://github.com/pingcap/kvproto.git", branch = "br-stream"}
tokio-stream = "0.1"
protobuf = { version = "2.8", features = ["bytes"] }
regex = "1"
tikv_util = {path = "../tikv_util"}
txn_types = { path = "../txn_types", default-features = false }
tikv_alloc = {path = "../tikv_alloc"}
external_storage_export = { path = "../external_storage/export", default-features = false }
external_storage = { path = "../external_storage", default-features = false }
log_wrappers = { path = "../log_wrappers" }
lazy_static = "1.4"
futures = "0.3"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
hex = "0.4"
uuid = "0.8"
openssl = "0.10"
dashmap = "5"
crossbeam = "0.8"
crossbeam-channel = "0.5"

file_system = { path = "../file_system" }
tidb_query_datatype = {path = "../tidb_query_datatype", default-features = false}
engine_rocks = { path = "../engine_rocks", default-features = false }
engine_traits = { path = "../engine_traits", default-features = false }
raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
raftstore = { path = "../raftstore", default-features = false }
tikv = { path = "../../", default-features = false }
online_config = { path = "../online_config" }
resolved_ts = { path = "../resolved_ts"}
pd_client = {path = "../pd_client"}

[dev-dependencies]
rand = "0.8.0"
engine_panic = {path = "../engine_panic"}