[package]
name = "br_parquet_exporter"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
base64 = "0.21"
collections = { workspace = true }
engine_traits = { workspace = true }
engine_rocks = { workspace = true }
external_storage = { workspace = true }
file_system = { workspace = true }
futures = "0.3"
hex = "0.4"
keys = { workspace = true }
kvproto = { workspace = true }
lazy_static = "1.4"
parquet = { version = "51", default-features = false, features = ["snap", "brotli", "flate2", "zstd", "lz4"] }
prometheus = { version = "0.13", features = ["nightly"] }
protobuf = { workspace = true }
slog = { workspace = true }
slog-global = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3"
tidb_query_datatype = { workspace = true }
tikv_util = { workspace = true }
tipb = { workspace = true }
thiserror = "1.0"

[dev-dependencies]
engine_test = { workspace = true }
test_util = { workspace = true }
tokio = { version = "1.5", features = ["rt-multi-thread"] }
