[package]
name = "causal_ts"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
api_version = { path = "../api_version", default-features = false }
engine_rocks = { path = "../engine_rocks", default-features = false }
engine_traits = { path = "../engine_traits", default-features = false }
error_code = { path = "../error_code", default-features = false }
futures = { version = "0.3" }
kvproto = { git = "https://github.com/pingcap/kvproto.git" }
lazy_static = "1.3"
parking_lot = "0.12"
pd_client = { path = "../pd_client", default-features = false }
prometheus = { version = "0.13", features = ["nightly"] }
raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
raftstore = { path = "../raftstore", default-features = false }
serde = "1.0"
serde_derive = "1.0"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
thiserror = "1.0"
tikv_alloc = { path = "../tikv_alloc" }
tikv_util = { path = "../tikv_util", default-features = false }
txn_types = { path = "../txn_types", default-features = false }

[dev-dependencies]
test_raftstore = { path = "../test_raftstore", default-features = false }
