[package]
name = "cdc"
version = "0.0.1"
edition = "2018"
publish = false

[features]
default = ["protobuf-codec", "test-engines-rocksdb"]
protobuf-codec = [
  "concurrency_manager/protobuf-codec",
  "engine_rocks/protobuf-codec",
  "engine_traits/protobuf-codec",
  "grpcio/protobuf-codec",
  "kvproto/protobuf-codec",
  "pd_client/protobuf-codec",
  "raft/protobuf-codec",
  "raftstore/protobuf-codec",
  "resolved_ts/protobuf-codec",
  "security/protobuf-codec",
  "tikv/protobuf-codec",
  "tikv_util/protobuf-codec",
  "txn_types/protobuf-codec",
]
prost-codec = [
  "concurrency_manager/prost-codec",
  "engine_rocks/prost-codec",
  "engine_traits/prost-codec",
  "grpcio/prost-codec",
  "kvproto/prost-codec",
  "pd_client/prost-codec",
  "raft/prost-codec",
  "raftstore/prost-codec",
  "resolved_ts/prost-codec",
  "security/prost-codec",
  "tikv/prost-codec",
  "tikv_util/prost-codec",
  "txn_types/prost-codec",
]
test-engines-rocksdb = [
  "tikv/test-engines-rocksdb",
]
test-engines-panic = [
  "tikv/test-engines-panic",
]
tcmalloc = ["tikv/tcmalloc"]
jemalloc = ["tikv/jemalloc"]
mimalloc = ["tikv/mimalloc"]
portable = ["tikv/portable"]
sse = ["tikv/sse"]
mem-profiling = ["tikv/mem-profiling"]
failpoints = ["tikv/failpoints"]

[dependencies]
bitflags = "1.0"
crossbeam = "0.7"
engine_rocks = { path = "../engine_rocks", default-features = false }
engine_traits = { path = "../engine_traits", default-features = false }
failure = "0.1"
futures = "0.3"
grpcio = { version = "0.8",  default-features = false, features = ["openssl-vendored"] }
kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
pd_client = { path = "../pd_client", default-features = false }
raft = { version = "0.6.0-alpha", default-features = false }
raftstore = { path = "../raftstore", default-features = false }
resolved_ts = { path = "../resolved_ts", default-features = false }
security = { path = "../security", default-features = false }
semver = "0.10"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
tikv = { path = "../../", default-features = false }
tikv_util = { path = "../tikv_util", default-features = false }
collections = { path = "../collections" }
tokio = { version = "0.2", features = ["rt-threaded"]}
txn_types = { path = "../txn_types", default-features = false }
concurrency_manager = { path = "../concurrency_manager", default-features = false }
fail = "0.4"
lazy_static = "1.3"
log_wrappers = { path = "../log_wrappers" }
prometheus = { version = "0.10", default-features = false, features = ["nightly"] }
protobuf = "2.8"
prost = "0.7"

[dev-dependencies]
engine_traits = { path = "../engine_traits", default-features = false }
tempfile = "3.0"
test_raftstore = { path = "../test_raftstore", default-features = false }
test_util = { path = "../test_util", default-features = false }
panic_hook = { path = "../panic_hook" }
raft = { version = "0.6.0-alpha", default-features = false }

[[test]]
name = "integrations"
path = "tests/integrations/mod.rs"

# To avoid failpoints interfere with normal tests, we separate them.
[[test]]
name = "failpoints"
path = "tests/failpoints/mod.rs"
required-features = ["failpoints"]
