[package]
name = "cloud"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
async-trait = "0.1"
derive_more = "0.99.3"
error_code = { path = "../error_code", default-features = false }
futures-io = "0.3"
kvproto = { git = "https://github.com/pingcap/kvproto.git" }
lazy_static = "1.3"
openssl = "0.10"
prometheus = { version = "0.13", default-features = false, features = ["nightly"] }
protobuf = { version = "2.8", features = ["bytes"] }
rusoto_core = "0.46.0"
thiserror = "1.0"
tikv_util = { path = "../tikv_util", default-features = false }
url = "2.0"

[dev-dependencies]
fail = "0.5"
